commit entity modification, some refactoring and not refactored dao